--- a/beaks-data-topostats-first-look.ipynb
+++ b/beaks-data-topostats-first-look.ipynb
@@ -269,8 +269,11 @@
     "        curvature_threshold = 0.25\n",
     "        curvature_defects = np.where(np.abs(resampled_curvatures) > curvature_threshold)[0]\n",
     "\n",
+    "        # for exploration plot\n",
+    "        exploration_fig, exploration_ax = plt.subplots(figsize=(5, 5))\n",
+    "        exploration_ax.imshow(mask_thick)\n",
     "        # plot the molecule\n",
-    "        fig, ax = plt.subplots(figsize=(5, 5))\n",
+    "        fig, ax = plt.subplots(figsize=(10, 10))\n",
     "        plt.imshow(image)\n",
     "        plt.imshow(mask_thick, alpha=0.5)\n",
     "        plt.plot(resampled_points_px[:, 1], resampled_points_px[:, 0], \"r\")\n",
@@ -309,7 +312,7 @@
     "            # mark this point with a blue hollow circle\n",
     "            plt.plot(slight_defect_point[1], slight_defect_point[0], \"o\", c=\"b\", markersize=10, alpha=0.5)\n",
     "\n",
-    "            slight_defect_explore_range_points = 3\n",
+    "            slight_defect_explore_range_points = 2\n",
     "            # check if the explore range will be in bounds, also remember that the neighbouring points are checked hence the +1 -1\n",
     "            if slight_defect_index - slight_defect_explore_range_points - 1 < 0:\n",
     "                if not is_circular:\n",
@@ -350,7 +353,18 @@
     "\n",
     "            plt.plot(interpolated_possible_beak_points[:, 1], interpolated_possible_beak_points[:, 0], \"cyan\")\n",
     "\n",
+    "            exploration_profile = []\n",
+    "            exploration_min_x = slight_defect_point[1]\n",
+    "            exploration_max_x = mask_thick.shape[1]\n",
+    "            exploration_min_y = slight_defect_point[0]\n",
+    "            exploration_max_y = mask_thick.shape[0]\n",
+    "\n",
     "            for point_index, point in enumerate(interpolated_possible_beak_points):\n",
+    "                # update exploration min max values\n",
+    "                exploration_min_x = max(point[1], exploration_min_x)\n",
+    "                exploration_max_x = min(point[1], exploration_max_x)\n",
+    "                exploration_min_y = max(point[0], exploration_min_y)\n",
+    "                exploration_max_y = min(point[0], exploration_max_y)\n",
     "                if point_index == 0:\n",
     "                    continue\n",
     "                elif point_index == len(interpolated_possible_beak_points) - 1:\n",
@@ -372,60 +386,100 @@
     "                        alpha=0.5,\n",
     "                    )\n",
     "\n",
-    "            # # start at a point 3 points before and iterate to 3 points after\n",
-    "            # for relative_index in range(-3, 4):\n",
-    "            #     current_point_index = slight_defect_index + relative_index\n",
-    "            #     # check if the indexes are in bounds and map them if not. if they aren't, they're guaranteed\n",
-    "            #     if current_point_index < 0:\n",
-    "            #         current_point_index += len(resampled_points_px)\n",
-    "            #     if current_point_index >= len(resampled_points_px):\n",
-    "            #         current_point_index -= len(resampled_points_px)\n",
-    "            #     previous_point_index = current_point_index - 1\n",
-    "            #     if previous_point_index < 0:\n",
-    "            #         previous_point_index += len(resampled_points_px)\n",
-    "            #     if previous_point_index >= len(resampled_points_px):\n",
-    "            #         previous_point_index -= len(resampled_points_px)\n",
-    "            #     next_point_index = current_point_index + 1\n",
-    "            #     if next_point_index < 0:\n",
-    "            #         next_point_index += len(resampled_points_px)\n",
-    "            #     if next_point_index >= len(resampled_points_px):\n",
-    "            #         next_point_index -= len(resampled_points_px)\n",
+    "                    # explore the mask in the direction of the vector\n",
+    "                    possible_beak_vector_delta_px = 0.5\n",
+    "                    exploration_current_position = point.astype(float)\n",
+    "                    plt.plot(\n",
+    "                        exploration_current_position[1],\n",
+    "                        exploration_current_position[0],\n",
+    "                        \"o\",\n",
+    "                        c=\"yellow\",\n",
+    "                        markersize=2,\n",
+    "                    )\n",
     "\n",
-    "            #     # grab points\n",
-    "            #     previous_point = resampled_points_px[previous_point_index]\n",
-    "            #     current_point = resampled_points_px[current_point_index]\n",
-    "            #     next_point = resampled_points_px[next_point_index]\n",
-    "            #     vector_to_previous_point = previous_point - current_point\n",
-    "            #     vector_to_previous_point /= np.linalg.norm(vector_to_previous_point)\n",
-    "            #     vector_to_next_point = next_point - current_point\n",
-    "            #     vector_to_next_point /= np.linalg.norm(vector_to_next_point)\n",
+    "                    exploration_ax.plot(\n",
+    "                        exploration_current_position[1],\n",
+    "                        exploration_current_position[0],\n",
+    "                        \"o\",\n",
+    "                        c=\"green\",\n",
+    "                        markersize=2,\n",
+    "                    )\n",
+    "                    exploration_ax.plot(\n",
+    "                        [\n",
+    "                            exploration_current_position[1],\n",
+    "                            exploration_current_position[1] + flipped_average_vector[1] * 10,\n",
+    "                        ],\n",
+    "                        [\n",
+    "                            exploration_current_position[0],\n",
+    "                            exploration_current_position[0] + flipped_average_vector[0] * 10,\n",
+    "                        ],\n",
+    "                        \"pink\",\n",
+    "                        alpha=0.5,\n",
+    "                    )\n",
+    "                    # while still in the mask, continue forward\n",
+    "                    while True:\n",
+    "                        exploration_current_position += possible_beak_vector_delta_px * flipped_average_vector.astype(\n",
+    "                            float\n",
+    "                        )\n",
+    "                        exploration_ax.plot(\n",
+    "                            exploration_current_position[1],\n",
+    "                            exploration_current_position[0],\n",
+    "                            \"o\",\n",
+    "                            c=\"orange\",\n",
+    "                            markersize=2,\n",
+    "                        )\n",
+    "                        # turn to integer coords\n",
+    "                        exploration_current_position_int = exploration_current_position.astype(int)\n",
+    "                        # check if still in mask\n",
+    "                        if (\n",
+    "                            exploration_current_position_int[0] < 0\n",
+    "                            or exploration_current_position_int[0] >= mask.shape[0]\n",
+    "                        ):\n",
+    "                            print(f\"[exploration] reached edge of image at {exploration_current_position}\")\n",
+    "                            break\n",
+    "                        if (\n",
+    "                            exploration_current_position_int[1] < 0\n",
+    "                            or exploration_current_position_int[1] >= mask.shape[1]\n",
+    "                        ):\n",
+    "                            print(f\"[exploration] reached edge of image at {exploration_current_position_int}\")\n",
+    "                            break\n",
+    "                        # check if in mask\n",
+    "                        if not mask_thick[exploration_current_position_int[0], exploration_current_position_int[1]]:\n",
+    "                            # reached edge of mask, find distance to start exploration point\n",
+    "                            distance_to_explore_start = np.linalg.norm(exploration_current_position_int - point)\n",
+    "                            exploration_profile.append(distance_to_explore_start)\n",
+    "                            # mark the point\n",
+    "                            plt.plot(\n",
+    "                                exploration_current_position_int[1],\n",
+    "                                exploration_current_position_int[0],\n",
+    "                                \"o\",\n",
+    "                                c=\"orange\",\n",
+    "                                markersize=2,\n",
+    "                            )\n",
+    "                            exploration_ax.plot(\n",
+    "                                exploration_current_position_int[1],\n",
+    "                                exploration_current_position_int[0],\n",
+    "                                \"o\",\n",
+    "                                c=\"red\",\n",
+    "                                markersize=2,\n",
+    "                            )\n",
+    "                            break\n",
     "\n",
-    "            #     # calculate vector half way between the two\n",
-    "            #     average_vector = (vector_to_previous_point + vector_to_next_point) / 2\n",
-    "            #     average_vector /= np.linalg.norm(average_vector)\n",
+    "            # show just the exploration ax\n",
+    "            exploration_ax.set_aspect(\"equal\", adjustable=\"box\")\n",
+    "            exploration_ax_lim_padding = 20\n",
+    "            exploration_ax.set_xlim(exploration_min_x - exploration_ax_lim_padding, exploration_max_x + exploration_ax_lim_padding)\n",
+    "            exploration_ax.set_ylim(exploration_min_y - exploration_ax_lim_padding, exploration_max_y + exploration_ax_lim_padding)\n",
+    "            # flip the y axis\n",
+    "            exploration_ax.invert_yaxis()            \n",
     "\n",
-    "            #     # flip it the other way to face away from the turn\n",
-    "            #     flipped_average_vector = -average_vector\n",
+    "            exploration_profile = np.array(exploration_profile)\n",
     "\n",
-    "            #     # # travel along the orthogonal vector, seeing if we are still in the mask\n",
-    "            #     # orthogonal_vector_step_delta = 0.2 # pixels\n",
-    "            #     # current_orthogonal_point = current_point\n",
-    "            #     # # follow the orthogonal vector until the current pixel is not in the mask\n",
-    "            #     # while True:\n",
-    "            #     #     current_orthogonal_point += orthogonal_vector * orthogonal_vector_step_delta\n",
-    "            #     #     current_orthogonal_point_integer = current_orthogonal_point.astype(int)\n",
-    "            #     #     if mask[current_orthogonal_point_integer[0], current_orthogonal_point_integer[1]] == 0:\n",
-    "            #     #         break\n",
-    "\n",
-    "            #     # plot where the vector ends\n",
-    "\n",
-    "            #     # draw the orthogonal vector\n",
-    "            #     plt.plot(\n",
-    "            #         [current_point[1], current_point[1] + flipped_average_vector[1] * 10],\n",
-    "            #         [current_point[0], current_point[0] + flipped_average_vector[0] * 10],\n",
-    "            #         \"g\",\n",
-    "            #         alpha=0.5,\n",
-    "            #     )\n",
+    "            explore_profile_fig, explore_profile_ax = plt.subplots()\n",
+    "            explore_profile_ax.plot(exploration_profile)\n",
+    "            explore_profile_ax.set_title(\n",
+    "                f\"grain {grain_index} molecule {molecule_index} slight defect index {slight_defect_index} exploration profile\"\n",
+    "            )\n",
     "\n",
     "        plt.gca().set_aspect(\"equal\", adjustable=\"box\")\n",
     "        plt.title(\n",
@@ -439,7 +493,9 @@
     "        plt.legend()\n",
     "        plt.ylim(-0.1, 0.5)\n",
     "        plt.title(f\"grain {grain_index} molecule {molecule_index} curvatures\")\n",
-    "        plt.show()"
+    "        plt.show()\n",
+    "\n",
+    "    break"
    ]
   },
   {
