exploration good threshold and plots

--- a/beaks-data-topostats-first-look.ipynb
+++ b/beaks-data-topostats-first-look.ipynb
@@ -224,6 +224,8 @@
     "    bbox_added_left = grain_data[\"added_left\"]\n",
     "    bbox_added_top = grain_data[\"added_top\"]\n",
     "\n",
+    "    print(f\"p2nm: {p2nm}\")\n",
+    "\n",
     "    # plt.imshow(full_image)\n",
     "    # plt.show()\n",
     "\n",
@@ -266,23 +268,20 @@
     "        else:\n",
     "            resampled_curvatures = discrete_angle_difference_per_nm_linear(resampled_points_nm)\n",
     "        # threshold the curvature to find defects\n",
-    "        curvature_threshold = 0.25\n",
+    "        curvature_threshold = 0.3\n",
     "        curvature_defects = np.where(np.abs(resampled_curvatures) > curvature_threshold)[0]\n",
     "\n",
-    "        # for exploration plot\n",
-    "        exploration_fig, exploration_ax = plt.subplots(figsize=(5, 5))\n",
-    "        exploration_ax.imshow(mask_thick)\n",
     "        # plot the molecule\n",
-    "        fig, ax = plt.subplots(figsize=(10, 10))\n",
-    "        plt.imshow(image)\n",
-    "        plt.imshow(mask_thick, alpha=0.5)\n",
-    "        plt.plot(resampled_points_px[:, 1], resampled_points_px[:, 0], \"r\")\n",
+    "        grain_fig, grain_ax = plt.subplots(figsize=(10, 10))\n",
+    "        grain_ax.imshow(image)\n",
+    "        grain_ax.imshow(mask_thick, alpha=0.5)\n",
+    "        grain_ax.plot(resampled_points_px[:, 1], resampled_points_px[:, 0], \"r\")\n",
     "        # change the coordinates of the plot to be in nanometers using the pixel to nm scaling ratio\n",
     "        for resampled_point_index, resampled_point in enumerate(resampled_points_px):\n",
     "            curvature = resampled_curvatures[resampled_point_index]\n",
     "            # colour the curvature to be between 0.5 and -0.5\n",
     "            colour = (curvature + 0.5) / 1\n",
-    "            plt.plot(\n",
+    "            grain_ax.plot(\n",
     "                resampled_point[1],\n",
     "                resampled_point[0],\n",
     "                \"o\",\n",
@@ -292,7 +291,7 @@
     "\n",
     "        for defect_index in curvature_defects:\n",
     "            resampled_point = resampled_points_px[defect_index]\n",
-    "            plt.plot(\n",
+    "            grain_ax.plot(\n",
     "                resampled_point[1],\n",
     "                resampled_point[0],\n",
     "                \"o\",\n",
@@ -303,6 +302,7 @@
     "        # find beaks at regions of moderate curvature\n",
     "        possible_beak_curvature_threshold = 0.2\n",
     "        possible_beak_points_interpolation_number = 20\n",
+    "        exploration_distance_defect_threshold_nm = 7\n",
     "        slight_curvature_defects = np.where(np.abs(resampled_curvatures) > possible_beak_curvature_threshold)[0]\n",
     "        # at these regions, explore the mask to see if there is a beak\n",
     "        for slight_defect_index in slight_curvature_defects:\n",
@@ -310,7 +310,7 @@
     "            # get the mask value at this point\n",
     "            mask_value = mask[int(slight_defect_point[0]), int(slight_defect_point[1])]\n",
     "            # mark this point with a blue hollow circle\n",
-    "            plt.plot(slight_defect_point[1], slight_defect_point[0], \"o\", c=\"b\", markersize=10, alpha=0.5)\n",
+    "            grain_ax.plot(slight_defect_point[1], slight_defect_point[0], \"o\", c=\"b\", markersize=8)\n",
     "\n",
     "            slight_defect_explore_range_points = 2\n",
     "            # check if the explore range will be in bounds, also remember that the neighbouring points are checked hence the +1 -1\n",
@@ -351,13 +351,9 @@
     "            interpolator = interp1d(distance, possible_beak_points, kind=\"cubic\", axis=0)\n",
     "            interpolated_possible_beak_points = interpolator(alpha)\n",
     "\n",
-    "            plt.plot(interpolated_possible_beak_points[:, 1], interpolated_possible_beak_points[:, 0], \"cyan\")\n",
+    "            grain_ax.plot(interpolated_possible_beak_points[:, 1], interpolated_possible_beak_points[:, 0], \"cyan\")\n",
     "\n",
     "            exploration_profile = []\n",
-    "            exploration_min_x = slight_defect_point[1]\n",
-    "            exploration_max_x = mask_thick.shape[1]\n",
-    "            exploration_min_y = slight_defect_point[0]\n",
-    "            exploration_max_y = mask_thick.shape[0]\n",
     "\n",
     "            for point_index, point in enumerate(interpolated_possible_beak_points):\n",
     "                # update exploration min max values\n",
@@ -379,7 +375,7 @@
     "                    average_vector = (vector_to_previous_point + vector_to_next_point) / 2\n",
     "                    average_vector /= np.linalg.norm(average_vector)\n",
     "                    flipped_average_vector = -average_vector\n",
-    "                    plt.plot(\n",
+    "                    grain_ax.plot(\n",
     "                        [point[1], point[1] + flipped_average_vector[1] * 10],\n",
     "                        [point[0], point[0] + flipped_average_vector[0] * 10],\n",
     "                        \"g\",\n",
@@ -389,44 +385,17 @@
     "                    # explore the mask in the direction of the vector\n",
     "                    possible_beak_vector_delta_px = 0.5\n",
     "                    exploration_current_position = point.astype(float)\n",
-    "                    plt.plot(\n",
+    "                    grain_ax.plot(\n",
     "                        exploration_current_position[1],\n",
     "                        exploration_current_position[0],\n",
     "                        \"o\",\n",
     "                        c=\"yellow\",\n",
     "                        markersize=2,\n",
     "                    )\n",
-    "\n",
-    "                    exploration_ax.plot(\n",
-    "                        exploration_current_position[1],\n",
-    "                        exploration_current_position[0],\n",
-    "                        \"o\",\n",
-    "                        c=\"green\",\n",
-    "                        markersize=2,\n",
-    "                    )\n",
-    "                    exploration_ax.plot(\n",
-    "                        [\n",
-    "                            exploration_current_position[1],\n",
-    "                            exploration_current_position[1] + flipped_average_vector[1] * 10,\n",
-    "                        ],\n",
-    "                        [\n",
-    "                            exploration_current_position[0],\n",
-    "                            exploration_current_position[0] + flipped_average_vector[0] * 10,\n",
-    "                        ],\n",
-    "                        \"pink\",\n",
-    "                        alpha=0.5,\n",
-    "                    )\n",
     "                    # while still in the mask, continue forward\n",
     "                    while True:\n",
     "                        exploration_current_position += possible_beak_vector_delta_px * flipped_average_vector.astype(\n",
     "                            float\n",
-    "                        )\n",
-    "                        exploration_ax.plot(\n",
-    "                            exploration_current_position[1],\n",
-    "                            exploration_current_position[0],\n",
-    "                            \"o\",\n",
-    "                            c=\"orange\",\n",
-    "                            markersize=2,\n",
     "                        )\n",
     "                        # turn to integer coords\n",
     "                        exploration_current_position_int = exploration_current_position.astype(int)\n",
@@ -449,104 +418,52 @@
     "                            distance_to_explore_start = np.linalg.norm(exploration_current_position_int - point)\n",
     "                            exploration_profile.append(distance_to_explore_start)\n",
     "                            # mark the point\n",
-    "                            plt.plot(\n",
+    "                            grain_ax.plot(\n",
     "                                exploration_current_position_int[1],\n",
     "                                exploration_current_position_int[0],\n",
     "                                \"o\",\n",
     "                                c=\"orange\",\n",
     "                                markersize=2,\n",
     "                            )\n",
-    "                            exploration_ax.plot(\n",
-    "                                exploration_current_position_int[1],\n",
-    "                                exploration_current_position_int[0],\n",
-    "                                \"o\",\n",
-    "                                c=\"red\",\n",
-    "                                markersize=2,\n",
-    "                            )\n",
     "                            break\n",
     "\n",
-    "            # show just the exploration ax\n",
-    "            exploration_ax.set_aspect(\"equal\", adjustable=\"box\")\n",
-    "            exploration_ax_lim_padding = 20\n",
-    "            exploration_ax.set_xlim(exploration_min_x - exploration_ax_lim_padding, exploration_max_x + exploration_ax_lim_padding)\n",
-    "            exploration_ax.set_ylim(exploration_min_y - exploration_ax_lim_padding, exploration_max_y + exploration_ax_lim_padding)\n",
-    "            # flip the y axis\n",
-    "            exploration_ax.invert_yaxis()            \n",
-    "\n",
     "            exploration_profile = np.array(exploration_profile)\n",
+    "            exploration_profile_nm = exploration_profile * p2nm\n",
+    "\n",
+    "            # get index of largest exploration profile point and the value\n",
+    "            largest_exploration_index = np.argmax(exploration_profile)\n",
+    "            largest_exploration_distance = exploration_profile_nm[largest_exploration_index]\n",
+    "            if largest_exploration_distance > exploration_distance_defect_threshold_nm:\n",
+    "                print(f\"possible defect confirmed, with distance {largest_exploration_distance} > {exploration_distance_defect_threshold_nm} nm\")\n",
+    "                grain_ax.plot(\n",
+    "                    interpolated_possible_beak_points[largest_exploration_index][1],\n",
+    "                    interpolated_possible_beak_points[largest_exploration_index][0],\n",
+    "                    \"o\",\n",
+    "                    c=\"green\",\n",
+    "                    markersize=6,\n",
+    "                )\n",
     "\n",
     "            explore_profile_fig, explore_profile_ax = plt.subplots()\n",
-    "            explore_profile_ax.plot(exploration_profile)\n",
+    "            explore_profile_ax.plot(exploration_profile_nm)\n",
     "            explore_profile_ax.set_title(\n",
     "                f\"grain {grain_index} molecule {molecule_index} slight defect index {slight_defect_index} exploration profile\"\n",
     "            )\n",
     "\n",
     "        plt.gca().set_aspect(\"equal\", adjustable=\"box\")\n",
-    "        plt.title(\n",
+    "        grain_ax.set_title(\n",
     "            f\"grain {grain_index} molecule {molecule_index} bbox: {bbox} padding: {bbox_padding} circular: {is_circular}\"\n",
     "        )\n",
     "        plt.show()\n",
     "\n",
     "        # plot curvatures\n",
-    "        plt.plot(resampled_curvatures, label=\"discrete curvatures\")\n",
-    "        plt.plot(np.abs(resampled_curvatures), label=\"discrete absolute cuvatures\")\n",
-    "        plt.legend()\n",
-    "        plt.ylim(-0.1, 0.5)\n",
-    "        plt.title(f\"grain {grain_index} molecule {molecule_index} curvatures\")\n",
-    "        plt.show()\n",
-    "\n",
-    "    break"
+    "        curvature_fig, curvature_ax = plt.subplots()\n",
+    "        curvature_ax.plot(resampled_curvatures, label=\"discrete curvatures\")\n",
+    "        curvature_ax.plot(np.abs(resampled_curvatures), label=\"discrete absolute cuvatures\")\n",
+    "        curvature_ax.legend()\n",
+    "        curvature_ax.set_ylim(-0.1, 0.5)\n",
+    "        curvature_ax.set_title(f\"grain {grain_index} molecule {molecule_index} curvatures\")\n",
+    "        plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from scipy.interpolate import interp1d\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Define some points:\n",
-    "points = np.array([[0, 1, 8, 2, 2], [1, 0, 6, 7, 2]]).T  # a (nbre_points x nbre_dim) array\n",
-    "print(points.shape)\n",
-    "\n",
-    "# because interpolating in 2d, need to interpolate with respect to the distance parameter, s, not x or y.\n",
-    "# so need to calculate the distance along the line\n",
-    "\n",
-    "# Linear length along the line:\n",
-    "distance = np.cumsum(np.sqrt(np.sum(np.diff(points, axis=0) ** 2, axis=1)))\n",
-    "# Prepend the initial distance of 0\n",
-    "distance = np.insert(distance, 0, 0) / distance[-1]\n",
-    "\n",
-    "# Interpolation for different methods:\n",
-    "interpolations_methods = [\"slinear\", \"quadratic\", \"cubic\"]\n",
-    "alpha = np.linspace(0, 1, 10)\n",
-    "\n",
-    "interpolated_points = {}\n",
-    "for method in interpolations_methods:\n",
-    "    interpolator = interp1d(distance, points, kind=method, axis=0)\n",
-    "    interpolated_points[method] = interpolator(alpha)\n",
-    "\n",
-    "# Graph:\n",
-    "plt.figure(figsize=(7, 7))\n",
-    "for method_name, curve in interpolated_points.items():\n",
-    "    plt.plot(*curve.T, \"-\", label=method_name)\n",
-    "\n",
-    "plt.plot(*points.T, \"ok\", label=\"original points\")\n",
-    "plt.axis(\"equal\")\n",
-    "plt.legend()\n",
-    "plt.xlabel(\"x\")\n",
-    "plt.ylabel(\"y\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
