--- a/beaks-process-grain-dictionary.ipynb
+++ b/beaks-process-grain-dictionary.ipynb
@@ -6,27 +6,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import pickle\n",
-    "import shutil\n",
-    "import sys\n",
-    "from datetime import datetime\n",
     "from pathlib import Path\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
+    "import pickle\n",
     "import numpy as np\n",
     "import numpy.typing as npt\n",
+    "import matplotlib.pyplot as plt\n",
     "from scipy.interpolate import interp1d\n",
     "\n",
-    "from topostats.io import LoadScans\n",
-    "from topostats.unet_masking import make_bounding_box_square, pad_bounding_box\n",
     "from topostats.measure.curvature import (\n",
     "    discrete_angle_difference_per_nm_circular,\n",
-    "    discrete_angle_difference_per_nm_linear,\n",
+    "    discrete_angle_difference_per_nm_linear\n",
     ")\n",
-    "\n",
-    "today = datetime.today().strftime(\"D-%Y-%m-%d-T-%H-%M\")\n",
-    "print(today)"
+    "from beaks import resample_points_regular_interval"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# load grain dictionary"
    ]
   },
   {
@@ -37,20 +35,16 @@
    "source": [
     "base_dir = Path(\"/Users/sylvi/topo_data/beaks\")\n",
     "assert base_dir.exists()\n",
-    "beak_topo_data_dir = base_dir / \"output-beaks-topostats-unet-good\"\n",
-    "assert beak_topo_data_dir.exists()\n",
+    "data_dir = base_dir / \"grain-dictionaries\"\n",
+    "assert data_dir.exists()\n",
+    "filename = \"grains_with_beaks_D-2025-03-04-T-13-35.pkl\"\n",
+    "assert (data_dir / filename).exists()\n",
     "\n",
-    "hummingbird_dir = beak_topo_data_dir / \"hummingbird/processed/\"\n",
-    "assert hummingbird_dir.exists()\n",
-    "magpie_dir = beak_topo_data_dir / \"magpie/processed/\"\n",
-    "assert magpie_dir.exists()\n",
+    "# load the dictionary\n",
+    "with open(data_dir / filename, \"rb\") as f:\n",
+    "    grains_dictionary = pickle.load(f)\n",
     "\n",
-    "# grab files in both directories ending in .topostats\n",
-    "hummingbird_files = hummingbird_dir.glob(\"*.topostats\")\n",
-    "magpie_files = magpie_dir.glob(\"*.topostats\")\n",
-    "# merge lists\n",
-    "all_files = list(hummingbird_files) + list(magpie_files)\n",
-    "print(f\"Found {len(all_files)} files\")"
+    "print(f\"Loaded {len(grains_dictionary)} grains\")\n"
    ]
   },
   {
@@ -59,158 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def interpolate_between_two_points(point1, point2, distance):\n",
-    "    distance_between_points = np.linalg.norm(point2 - point1)\n",
-    "    if distance_between_points < distance:\n",
-    "        raise ValueError(\"distance between points is less than the desired interval\")\n",
-    "    proportion = distance / distance_between_points\n",
-    "    new_point = point1 + proportion * (point2 - point1)\n",
-    "    return new_point"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## construct grain dictionary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grains_dictionary = {}\n",
-    "\n",
-    "loadscans = LoadScans(all_files, channel=\"dummy\")\n",
-    "loadscans.get_data()\n",
-    "img_dict = loadscans.img_dict\n",
-    "\n",
-    "bbox_padding = 10\n",
-    "grain_index = 0\n",
-    "for filename, file_data in img_dict.items():\n",
-    "    # print(f\"getting data from {filename}\")\n",
-    "    image = file_data[\"image\"]\n",
-    "    ordered_trace_data = file_data[\"ordered_traces\"][\"above\"]\n",
-    "    for current_grain_index, grain_ordered_trace_data in ordered_trace_data.items():\n",
-    "        # print(f\"  grain {current_grain_index}\")\n",
-    "        grains_dictionary[grain_index] = {}\n",
-    "        grains_dictionary[grain_index][\"molecule_data\"] = {}\n",
-    "        for current_molecule_index, molecule_ordered_trace_data in grain_ordered_trace_data.items():\n",
-    "            molecule_data = {}\n",
-    "            molecule_data[\"ordered_coords\"] = molecule_ordered_trace_data[\"ordered_coords\"]\n",
-    "            molecule_data[\"heights\"] = molecule_ordered_trace_data[\"heights\"]\n",
-    "            molecule_data[\"distances\"] = molecule_ordered_trace_data[\"distances\"]\n",
-    "            bbox = molecule_ordered_trace_data[\"bbox\"]\n",
-    "            grains_dictionary[grain_index][\"molecule_data\"][current_molecule_index] = molecule_data\n",
-    "\n",
-    "            splining_coords = file_data[\"splining\"][\"above\"][current_grain_index][current_molecule_index][\n",
-    "                \"spline_coords\"\n",
-    "            ]\n",
-    "            molecule_data[\"spline_coords\"] = splining_coords\n",
-    "\n",
-    "            # print(molecule_ordered_trace_data.keys())\n",
-    "        bbox_square = make_bounding_box_square(bbox[0], bbox[1], bbox[2], bbox[3], image.shape)\n",
-    "        bbox_padded = pad_bounding_box(\n",
-    "            bbox_square[0], bbox_square[1], bbox_square[2], bbox_square[3], image.shape, padding=bbox_padding\n",
-    "        )\n",
-    "        added_left = bbox_padded[1] - bbox[1]\n",
-    "        added_top = bbox_padded[0] - bbox[0]\n",
-    "\n",
-    "        image_crop = image[\n",
-    "            bbox_padded[0] : bbox_padded[2],\n",
-    "            bbox_padded[1] : bbox_padded[3],\n",
-    "        ]\n",
-    "        full_grain_mask = file_data[\"grain_masks\"][\"above\"]\n",
-    "        grains_dictionary[grain_index][\"image\"] = image_crop\n",
-    "        grains_dictionary[grain_index][\"full_image\"] = image\n",
-    "        grains_dictionary[grain_index][\"bbox\"] = bbox_padded\n",
-    "        grains_dictionary[grain_index][\"added_left\"] = added_left\n",
-    "        grains_dictionary[grain_index][\"added_top\"] = added_top\n",
-    "        grains_dictionary[grain_index][\"padding\"] = bbox_padding\n",
-    "        mask_crop = full_grain_mask[\n",
-    "            bbox_padded[0] : bbox_padded[2],\n",
-    "            bbox_padded[1] : bbox_padded[3],\n",
-    "        ]\n",
-    "        grains_dictionary[grain_index][\"mask\"] = mask_crop\n",
-    "        grains_dictionary[grain_index][\"filename\"] = file_data[\"filename\"]\n",
-    "        grains_dictionary[grain_index][\"pixel_to_nm_scaling\"] = file_data[\"pixel_to_nm_scaling\"]\n",
-    "        grain_index += 1\n",
-    "\n",
-    "# for grain_index, grain_data in grains_dictionary.items():\n",
-    "#     print(f\"grain {grain_index}\")\n",
-    "#     print(grain_data[\"filename\"])\n",
-    "#     print(grain_data[\"pixel_to_nm_scaling\"])\n",
-    "#     image = grain_data[\"image\"]\n",
-    "#     plt.imshow(image)\n",
-    "#     for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
-    "#         ordered_coords = molecule_data[\"ordered_coords\"]\n",
-    "#         plt.plot(ordered_coords[:, 1], ordered_coords[:, 0], \"r\")\n",
-    "#     plt.show()\n",
-    "\n",
-    "#     mask = grain_data[\"mask\"][:, :, 1]\n",
-    "#     plt.imshow(mask)\n",
-    "#     plt.show()\n",
-    "\n",
-    "print(len(grains_dictionary))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grains_with_beaks = [7, 13, 16, 26, 28, 30, 34, 36, 37, 38, 43, 45, 54, 55, 58, 65, 66, 71, 72, 79, 82, 89, 91, 92, 93]\n",
-    "\n",
-    "grains_with_beaks_dictionary = {}\n",
-    "\n",
-    "for grain_index in grains_with_beaks:\n",
-    "    grains_with_beaks_dictionary[grain_index] = grains_dictionary[grain_index]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def resample_points_regular_interval(points: npt.NDArray, interval: float):\n",
-    "    \"\"\"Resample a set of points to be at regular intervals\"\"\"\n",
-    "\n",
-    "    resampled_points = []\n",
-    "    resampled_points.append(points[0])\n",
-    "    current_point_index = 1\n",
-    "    while True:\n",
-    "        current_point = resampled_points[-1]\n",
-    "        next_original_point = points[current_point_index]\n",
-    "        distance_to_next_splined_point = np.linalg.norm(next_original_point - current_point)\n",
-    "        # if the distance to the next splined point is less than the interval, then skip to the next point\n",
-    "        if distance_to_next_splined_point < interval:\n",
-    "            current_point_index += 1\n",
-    "            if current_point_index >= len(points):\n",
-    "                break\n",
-    "            continue\n",
-    "        new_interpolated_point = interpolate_between_two_points(current_point, next_original_point, interval)\n",
-    "        resampled_points.append(new_interpolated_point)\n",
-    "\n",
-    "    # if the first and last points are less than 0.5 * the interval apart, then remove the last point\n",
-    "    if np.linalg.norm(resampled_points[0] - resampled_points[-1]) < 0.5 * interval:\n",
-    "        resampled_points = resampled_points[:-1]\n",
-    "\n",
-    "    resampled_points = np.array(resampled_points)\n",
-    "\n",
-    "    return resampled_points"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for grain_index, grain_data in grains_with_beaks_dictionary.items():\n",
+    "for grain_index, grain_data in grains_dictionary.items():\n",
     "    print(f\"grain {grain_index}\")\n",
     "\n",
     "    full_image = grain_data[\"full_image\"]\n",
@@ -247,7 +90,7 @@
     "\n",
     "        if len(splined_coords_nm) < min_splined_coords_num_points:\n",
     "            print(\n",
-    "                f\"Skipping molecule {current_molecule_index} in grain {grain_index} as it has too few points ({len(splined_coords_nm)} < {min_splined_coords_num_points})\"\n",
+    "                f\"Skipping molecule {molecule_index} in grain {grain_index} as it has too few points ({len(splined_coords_nm)} < {min_splined_coords_num_points})\"\n",
     "            )\n",
     "            continue\n",
     "\n",
@@ -430,7 +273,9 @@
     "            largest_exploration_index = np.argmax(exploration_profile)\n",
     "            largest_exploration_distance = exploration_profile_nm[largest_exploration_index]\n",
     "            if largest_exploration_distance > exploration_distance_defect_threshold_nm:\n",
-    "                print(f\"possible defect confirmed, with distance {largest_exploration_distance} > {exploration_distance_defect_threshold_nm} nm\")\n",
+    "                print(\n",
+    "                    f\"possible defect confirmed, with distance {largest_exploration_distance} > {exploration_distance_defect_threshold_nm} nm\"\n",
+    "                )\n",
     "                grain_ax.plot(\n",
     "                    interpolated_possible_beak_points[largest_exploration_index][1],\n",
     "                    interpolated_possible_beak_points[largest_exploration_index][0],\n",
