add beak counting and simple bar graphs

--- a/beaks-process-grain-dictionary.ipynb
+++ b/beaks-process-grain-dictionary.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "from topostats.measure.curvature import (\n",
     "    discrete_angle_difference_per_nm_circular,\n",
-    "    discrete_angle_difference_per_nm_linear\n",
+    "    discrete_angle_difference_per_nm_linear,\n",
     ")\n",
     "from beaks import resample_points_regular_interval"
    ]
@@ -44,7 +44,7 @@
     "with open(data_dir / filename, \"rb\") as f:\n",
     "    grains_dictionary = pickle.load(f)\n",
     "\n",
-    "print(f\"Loaded {len(grains_dictionary)} grains\")\n"
+    "print(f\"Loaded {len(grains_dictionary)} grains\")"
    ]
   },
   {
@@ -53,6 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "stats = {}\n",
+    "\n",
     "for grain_index, grain_data in grains_dictionary.items():\n",
     "    print(f\"grain {grain_index}\")\n",
     "\n",
@@ -66,6 +68,8 @@
     "    bbox_padding = grain_data[\"padding\"]\n",
     "    bbox_added_left = grain_data[\"added_left\"]\n",
     "    bbox_added_top = grain_data[\"added_top\"]\n",
+    "\n",
+    "    grain_beak_data = {}\n",
     "\n",
     "    print(f\"p2nm: {p2nm}\")\n",
     "\n",
@@ -81,6 +85,10 @@
     "        splined_coords_px_accurate_positions[:, 0] -= bbox_added_top\n",
     "        splined_coords_px_accurate_positions[:, 1] -= bbox_added_left\n",
     "        splined_coords_nm = splined_coords_px_accurate_positions * p2nm\n",
+    "\n",
+    "        molecule_beak_data = {}\n",
+    "        molecule_beak_data[\"num_beaks_sharp\"] = 0\n",
+    "        molecule_beak_data[\"num_beaks_explored\"] = 0\n",
     "\n",
     "        # plot splined coords px\n",
     "        # plt.imshow(image)\n",
@@ -132,6 +140,7 @@
     "                markersize=5,\n",
     "            )\n",
     "\n",
+    "        molecule_beak_data[\"num_beaks_sharp\"] = len(curvature_defects)\n",
     "        for defect_index in curvature_defects:\n",
     "            resampled_point = resampled_points_px[defect_index]\n",
     "            grain_ax.plot(\n",
@@ -273,6 +282,8 @@
     "            largest_exploration_index = np.argmax(exploration_profile)\n",
     "            largest_exploration_distance = exploration_profile_nm[largest_exploration_index]\n",
     "            if largest_exploration_distance > exploration_distance_defect_threshold_nm:\n",
+    "                # defect found\n",
+    "                molecule_beak_data[\"num_beaks_explored\"] += 1\n",
     "                print(\n",
     "                    f\"possible defect confirmed, with distance {largest_exploration_distance} > {exploration_distance_defect_threshold_nm} nm\"\n",
     "                )\n",
@@ -303,7 +314,98 @@
     "        curvature_ax.legend()\n",
     "        curvature_ax.set_ylim(-0.1, 0.5)\n",
     "        curvature_ax.set_title(f\"grain {grain_index} molecule {molecule_index} curvatures\")\n",
-    "        plt.show()"
+    "        plt.show()\n",
+    "\n",
+    "        grain_beak_data[molecule_index] = molecule_beak_data\n",
+    "\n",
+    "    stats[grain_index] = grain_beak_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot number of beaks per molecule\n",
+    "\n",
+    "# calculate molecules with a sharp beak\n",
+    "num_grains_sharp_beak = 0\n",
+    "# calculate molecules with an explored beak\n",
+    "num_grains_explored_beak = 0\n",
+    "# calculate molecules without any beak\n",
+    "num_grains_no_beak = 0\n",
+    "num_grains_with_any_beak = 0\n",
+    "num_grains_total = 0\n",
+    "\n",
+    "grains_num_sharp_beaks = []\n",
+    "grains_num_explored_beaks = []\n",
+    "\n",
+    "for grain_index, grain_beak_stats in stats.items():\n",
+    "    num_grains_total += 1\n",
+    "    mol_num_sharp_beaks = 0\n",
+    "    mol_num_explored_beaks = 0\n",
+    "    mol_has_sharp_beak = False\n",
+    "    mol_has_explored_beak = False\n",
+    "\n",
+    "    for molecule_index, molecule_beak_stats in grain_beak_stats.items():\n",
+    "        if molecule_beak_stats[\"num_beaks_sharp\"] > 0:\n",
+    "            mol_has_sharp_beak = True\n",
+    "        if molecule_beak_stats[\"num_beaks_explored\"] > 0:\n",
+    "            mol_has_explored_beak = True\n",
+    "\n",
+    "        mol_num_sharp_beaks += molecule_beak_stats[\"num_beaks_sharp\"]\n",
+    "        mol_num_explored_beaks += molecule_beak_stats[\"num_beaks_explored\"]\n",
+    "\n",
+    "    grains_num_sharp_beaks.append(mol_num_sharp_beaks)\n",
+    "    grains_num_explored_beaks.append(mol_num_explored_beaks)\n",
+    "\n",
+    "    if mol_has_sharp_beak:\n",
+    "        num_grains_sharp_beak += 1\n",
+    "    if mol_has_explored_beak:\n",
+    "        num_grains_explored_beak += 1\n",
+    "    if not mol_has_sharp_beak and not mol_has_explored_beak:\n",
+    "        num_grains_no_beak += 1\n",
+    "    if mol_has_sharp_beak or mol_has_explored_beak:\n",
+    "        num_grains_with_any_beak += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot num_grains_no_beak, num_grains_any_beak on a single bar\n",
+    "bar_x = [\"beaks vs no beaks\"]\n",
+    "bar_y_1 = [num_grains_with_any_beak]\n",
+    "bar_y_2 = [num_grains_no_beak]\n",
+    "\n",
+    "print(num_grains_total)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.bar(bar_x, bar_y_1, label=\"beaks\")\n",
+    "ax.bar(bar_x, bar_y_2, bottom=bar_y_1, label=\"no beaks\")\n",
+    "ax.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "grains_num_sharp_beaks = np.array(grains_num_sharp_beaks)\n",
+    "grains_num_explored_beaks = np.array(grains_num_explored_beaks)\n",
+    "\n",
+    "bar_xs_sharp = np.unique(grains_num_sharp_beaks)\n",
+    "bar_ys_sharp = np.array([np.sum(grains_num_sharp_beaks == x) for x in bar_xs_sharp])\n",
+    "bar_xs_explored = np.unique(grains_num_explored_beaks)\n",
+    "bar_ys_explored = np.array([np.sum(grains_num_explored_beaks == x) for x in bar_xs_explored])\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.bar(bar_xs_sharp, bar_ys_sharp)\n",
+    "plt.title(\"Number of sharp beaks per grain\")\n",
+    "plt.show()\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.bar(bar_xs_explored, bar_ys_explored)\n",
+    "plt.title(\"Number of explored beaks per grain\")\n",
+    "plt.show()\n"
    ]
   }
  ],
